2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php, include/functions_db.php: fix alert message
	when the history DB is'nt setup.
	
	* general/header.php: fix alert message when the custom logo didn't exit.

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: clean source code, fix when try show boolean without
	data, and some changes in "grafico_modulo_sparse".
	
	* operation/agentes/stat_win.php: clean source code.

2009-12-22  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: add debug function "f2str" that return as
	string any call of function, for example "var_dump".
	
	*include/fgraph.php: into function "grafico_modulo_boolean" re-add alarms,
	clean source code and show again the flash graph.
	
	*include/functions_db.php: fix the access to IP client, it used very
	deprecate var, that clean of notice php message of error for this cause.

2009-12-21  Ramon Novoa  <rnovoa@artica.es>

	* include/api.php: Added an Enterprise API.

2009-12-21  Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: clean source code.
	
	* operation/agentes/datos_agente.php: fix bug, there was a wrong copy&paste,
	now there is correct parameters.
	Fixes: 2916332

2009-12-18  Sancho lerena <slerena@artica.es>

	* pandora_console.spec: Ypdated build.

	* pandora_console_upgrade: Applied patch for more verbose information, submitted in 
	Sourceforge.

	* pandoradb_data.sql: Updated version to FINAL build and version ;-)

	* include/config_process.php: Updated build.

2009-12-18  Miguel de Dios  <miguel.dedios@artica.es>

	* include/fgraph.php: fix the graph boolean, it's rewrite.
	Fixes: 2916195

2009-12-18  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_reporting.php: Fixed SLA calculation. Was not working.

	* include/functions_fsgraph.php: Fixed bug #2913813.

	* include/functions_config.php, include/config_process.php,
	  include/fgraph.php, include/functions_db.php,